objects/FieloCRUD__ObjectSettings__c.object
<CustomObject>
    <fields>
        <fullName>FieloCRUD__FieldMember__c</fullName>
        <inlineHelpText>Complete this with the API name of the member lookup field related to this object.
This will ensure that only the related member can access records related to this object.</inlineHelpText>
        <label>Field Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__FieldToDefinePageLayout__c</fullName>
        <inlineHelpText>Define the field API name that will determine which page layout applies to the object.</inlineHelpText>
        <label>Field To Define Page Layout</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ObjectAPIName__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Object Setting</label>
    <listViews>
        <fullName>FieloCRUD__All</fullName>
        <columns>NAME</columns>
        <columns>FieloCRUD__ObjectAPIName__c</columns>
        <columns>FieloCRUD__FieldMember__c</columns>
        <columns>FieloCRUD__FieldToDefinePageLayout__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object Setting</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloCRUD__ObjectSetting_DuplicateName</fullName>
        <active>true</active>
        <errorConditionFormula>/*
AND(
NOT(ISBLANK(VLOOKUP($ObjectType.FieloCRUD__ObjectSettings__c.Fields.Id, $ObjectType.FieloCRUD__ObjectSettings__c.Fields.FieloCRUD__ObjectAPIName__c, FieloCRUD__ObjectAPIName__c))),
Id != VLOOKUP($ObjectType.FieloCRUD__ObjectSettings__c.Fields.Id, $ObjectType.FieloCRUD__ObjectSettings__c.Fields.FieloCRUD__ObjectAPIName__c, FieloCRUD__ObjectAPIName__c)
)
*/
FALSE</errorConditionFormula>
        <errorDisplayField>FieloCRUD__ObjectAPIName__c</errorDisplayField>
        <errorMessage>There is already an object setting with that name!</errorMessage>
    </validationRules>
</CustomObject>